Changes for 4.2.0alpha2

New features:
..F....... [ZBXNEXT-2315] implemented content matching in web monitoring headers (talbergs, vso)

Bug fixes:
..F....... [ZBX-14606] removed strict-transport-security header from frontend (miks)
..F....... [ZBX-15020] fixed negative time selector offset when selecting time range in graph (miks)
A......... [ZBX-14977] fixed creation of unneeded database record if host prototype inventory mode is disabled; fixed validation for host and host prototype inventory mode (miks)
A......... [ZBX-15146] fixed SQL error occurred when too long IP address is attempted to be written in database (miks)
..F....... [ZBX-15148] fixed web scenario item selection in SVG graph widget (miks)
...G...... [ZBX-15107] fixed error handling in logrt[] items if regular expression for file name is not valid (Andris)
...G....S. [ZBX-15178] fixed wrong behaviour when referencing unexisting capture groups in item regexp preprocessing, general pcre code improvements (Andris, kalimulin)

--------------------------------------------------------------------------------
Changes for 4.2.0alpha1

New features:
A.F.I...S. [ZBXNEXT-4853,ZBXNEXT-517] added ability to send email messages in HTML format on demand (MVekslers, vasilijs)
..F.....S. [ZBXNEXT-1282,ZBXNEXT-4730] added changes to introduce regex based matching for auto-registration (vasilijs, viktors)

--------------------------------------------------------------------------------
Changes for 4.0.3rc1

New features:

Bug fixes:
..F....... [ZBX-14877] fixed style of disabled action on high contrast theme (Andzs, ashubin)
..F....... [ZBX-14606] removed strict-transport-security header from frontend (miks)
..F....... [ZBX-15020] fixed negative time selector offset when selecting time range in graph (miks)
A......... [ZBX-14977] fixed creation of unneeded database record if host prototype inventory mode is disabled; fixed validation for host and host prototype inventory mode (miks)