@@ -4,6 +4,7 @@ New features:
 ..F....... [ZBXNEXT-2315] implemented content matching in web monitoring headers (talbergs, vso)
 
 Bug fixes:
+..F....... [ZBX-14877] fixed style of disabled action on high contrast theme (Andzs, ashubin)
 ..F....... [ZBX-14606] removed strict-transport-security header from frontend (miks)
 ..F....... [ZBX-15020] fixed negative time selector offset when selecting time range in graph (miks)
 A......... [ZBX-14977] fixed creation of unneeded database record if host prototype inventory mode is disabled; fixed validation for host and host prototype inventory mode (miks)
